--- a/study/pom.xml
+++ b/study/pom.xml
@@ -4,9 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>bingoal</groupId>
+    <parent>
+        <groupId>recaton</groupId>
+        <artifactId>recaton</artifactId>
+        <relativePath>../pom.xml</relativePath>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>study</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
 
     <dependencies>
@@ -21,18 +26,6 @@
             <artifactId>h2</artifactId>
             <version>1.4.197</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
         </dependency>
     </dependencies>
 
