--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
     <artifactId>recaton</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>taskchain</module>
+    </modules>
 
     <build>
         <plugins>
